HTML CSS and JS added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <img src="assets/img/wh-logo.png" alt="Women's Health">
                 <img src="assets/img/forbes-logo.png" alt="Forbes">
                 <img src="assets/img/mayo-clinic-logo.png" alt="Mayo Clinic">
-                <img src="assets/img/wsj-logo.png" alt="The Wall Street Journal">
+                <img src="assets/img/WSJ-logo.png" alt="The Wall Street Journal">
                 <img src="assets/img/vogue-logo.png" alt="Vogue">
             </div>
         </div>
